add: OG image larger

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta property="og:title" content="Sugarchain" />
 		<meta property="og:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
 		<meta property="og:image" content="/og_image.jpg" />
+		<!-- Include this to make the og:image larger -->
+		<meta name="twitter:card" content="summary_large_image">
 
 		<title>Sugarchain</title>
 		<link rel="icon" type="image/png" href="logo.png">
