--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 		<meta property="og:title" content="Sugarchain" />
 		<meta property="og:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
 		<meta property="og:image" content="/og_image.jpg" />
-		<!-- Include this to make the og:image larger -->
-		<meta name="twitter:card" content="summary_large_image">
+
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Sugarchain" />
+		<meta name="twitter:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
+		<meta name="twitter:site" content="@sugarchain_dev" />
+		<meta name="twitter:creator" content="@sugarchain_dev" />
+		<meta name="twitter:image" content="/og_image.jpg" />
 
 		<title>Sugarchain</title>
 		<link rel="icon" type="image/png" href="logo.png">
