--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta name="twitter:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
 		<meta name="twitter:site" content="@sugarchain_dev" />
 		<meta name="twitter:creator" content="@sugarchain_dev" />
-		<meta name="twitter:image" content="/og_image.jpg" />
+		<meta name="twitter:image" content="https://sugarchain.org/og_image.jpg" />
 
 		<title>Sugarchain</title>
 		<link rel="icon" type="image/png" href="logo.png">
