Revert "custom CSS in zero-md"
This reverts commit bac04cb0c74eb3c44ff63d26f8e6de945377277b.

--- a/index.html
+++ b/index.html
@@ -143,18 +143,7 @@
 							<!-- ZERO-MD -->
 							<!-- If you want to edit the contents of website, please edit this MD file. -->
 							<!-- "no-shadow" Enable Google Translate: https://github.com/zerodevx/zero-md/issues/32#issuecomment-659288445 -->
-							<zero-md no-shadow src="https://raw.githubusercontent.com/sugarchain-project/sugarchain-project.github.io/master/README.md">
-								<!-- Declare `<template>` element as a child of `<zero-md>` -->
-								<template>
-									<!-- Wrap your own CSS styles inside a `<style>` tag -->
-									<style>
-										code {
-											/* background-color: #cccccc; */
-											color: #e83e8c;
-										}
-									</style>
-								</template>
-							</zero-md>
+							<zero-md no-shadow src="https://raw.githubusercontent.com/sugarchain-project/sugarchain-project.github.io/master/README.md"></zero-md>
 
 
 							<!-- END - WEBSITE -->
