Revert "try: code color"
This reverts commit c38203b73f8c41b4d6cd4edaceba55f0076beedf.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<title>Sugarchain</title>
 		<link rel="icon" type="image/png" href="logo.png">
-		<link href="bootstrap.css" rel="stylesheet">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
