Add coingecko and CMC logos

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
 						<a href="https://github.com/sugarchain-project/team-contacts/blob/master/README.md" target="_blank">TEAM</a>
 						<a href="#contacts" class="scroll">CONTACTS</a>
 					</div>
+					<div class="markets mb-2">
+						<a href="https://coinmarketcap.com/currencies/sugarchain/" style="padding: 5px;"><img src="cmclogo.png" height="32" width="32"></a>
+						<a href="https://www.coingecko.com/en/coins/sugarchain" style="padding: 5px;"><img src="coingecko.png" height="32" width="32"></a>
+					</div>
 				</div>
 			</div>
 		</header>
