--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 						<a href="https://coinpaprika.com/coin/sugar-sugarchain/" target="_blank" class="img-link">
 							<img src="paprika.svg">
 						</a>
+						<a href="https://www.coinlore.com/coin/sugarchain" target="_blank" class="img-link">
+							<img src="coinlore.png">
+						</a>
 					</div>
 				</div>
 			</div>
