--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
 					// url: "https://api.sugarchain.org/info",
 					url: "https://api.sugar.wtf/info",
 				})).then(function(data) {
-					$("#height .current").attr("href", "https://1explorer.sugarchain.org/block/" + data["result"]["bestblockhash"])
+					// $("#height .current").attr("href", "https://1explorer.sugarchain.org/block/" + data["result"]["bestblockhash"])
+					$("#height .current").attr("href", "https://sugar.wtf/#/block/" + data["result"]["bestblockhash"])
 					$("#height .current").text(data["result"]["blocks"])
 					if (first) {
 						height_start = data["result"]["blocks"]
